--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -11,9 +11,11 @@
 					 	<img [src]="item.url" alt="Main Product Image" class="img-thumbnail" id="my-img">
 					 </div>
 					 <div class="col-md-7 p-3 bg-white border-radius-right">
-					 	<h3 class="py-4">Sed ut perspiciatis unde omnis</h3>
-					 	<p class="text-justify">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores.</p>
-					 		<div>
+					 	<h3 class="py-1">Sed ut perspiciatis unde omnis</h3>
+					 	<p class="text-justify">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit.</p>
+					 		<div> 
+                <b>Stock: </b> <b class="text-success"><i class="fa fa-check" aria-hidden="true"></i> Available</b><br>
+                <b>Category: </b> <b ><i class="fa fa-database" aria-hidden="true"></i> Chairs</b><br>
 					 			<b>Price: </b> <b><i class="fa fa-inr" aria-hidden="true"></i> 200.00</b>
 					 		</div>
                         	<div class="text-end">
